# cetkaik_fundamental

./: Cargo.toml
src/: absolute_side.rs  color.rs  color_and_prof.rs  lib.rs  profession.rs  pure_move.rs
