[package]
name = "cetkaik_fundamental"
description = "fundamental data types for cetkaik"
license = "MIT"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }